[BFN] Added reviewers to mock data for Request an Action on /kra-irb-dev/irb-protocolactions.html.  Change stems from an e-mail thread.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6405 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-irb-dev/irb-protocolactions.html
+++ b/kra-irb-dev/irb-protocolactions.html
@@ -313,9 +313,9 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                     <tr>
                                         <td style="border:none; width:50%; vertical-align:top;">
                                 
-                                            <table style="border:none; width:210px;" cellpadding="0" cellspacing="0">
+                                            <table style="border:none; width:285px;" cellpadding="0" cellspacing="0">
                                                 <tr>
-                                                    <td style="border:none; width:100px;">
+                                                    <td style="border:none; width:285px;">
                                                         <input type="checkbox" class="nobord" name="CustomData" value="0" />Tom Clark
                                                     </td>
                                                     <td style="border:none; width:20px; vertical-align:bottom;">
@@ -352,7 +352,79 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                                 </tr>
                                                 <tr>
                                                     <td style="border:none;">
-                                                        <input type="checkbox" class="nobord" name="CustomData" value="0" />Phat Albert
+                                                        <input type="checkbox" class="nobord" name="CustomData" value="0" />Isaac Newton
+                                                    </td>
+                                                    <td style="border:none; width:20px; vertical-align:bottom;">
+                                                        <select name="CustomDatat">
+                                                            <option value="0" selected="selected">select</option>
+                                                            <option value="1">primary</option>
+                                                            <option value="2">secondary</option>
+                                                        </select>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td style="border:none; width:100px;">
+                                                        <input type="checkbox" class="nobord" name="CustomData" value="0" />Albert Einstein
+                                                    </td>
+                                                    <td style="border:none; width:20px; vertical-align:bottom;">
+                                                        <select name="CustomDataw">
+                                                            <option value="0" selected="selected">select</option>
+                                                            <option value="1">primary</option>
+                                                            <option value="2">secondary</option>
+                                                        </select>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td style="border:none;">
+                                                        <input type="checkbox" class="nobord" name="CustomData" value="0" />Frederick Gowland Hopkins
+                                                    </td>
+                                                    <td style="border:none; width:20px; vertical-align:bottom;">
+                                                        <select name="CustomDatae">
+                                                            <option value="0" selected="selected">select</option>
+                                                            <option value="1">primary</option>
+                                                            <option value="2">secondary</option>
+                                                        </select>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td style="border:none;">
+                                                        <input type="checkbox" class="nobord" name="CustomData" value="0" />Charles Darwin
+                                                    </td>
+                                                    <td style="border:none; width:20px; vertical-align:bottom;">
+                                                        <select name="CustomDatar">
+                                                            <option value="0" selected="selected">select</option>
+                                                            <option value="1">primary</option>
+                                                            <option value="2">secondary</option>
+                                                        </select>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td style="border:none;">
+                                                        <input type="checkbox" class="nobord" name="CustomData" value="0" />Louis Pasteur
+                                                    </td>
+                                                    <td style="border:none; width:20px; vertical-align:bottom;">
+                                                        <select name="CustomDatat">
+                                                            <option value="0" selected="selected">select</option>
+                                                            <option value="1">primary</option>
+                                                            <option value="2">secondary</option>
+                                                        </select>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td style="border:none;">
+                                                        <input type="checkbox" class="nobord" name="CustomData" value="0" />Sigmund Freud
+                                                    </td>
+                                                    <td style="border:none; width:20px; vertical-align:bottom;">
+                                                        <select name="CustomDatar">
+                                                            <option value="0" selected="selected">select</option>
+                                                            <option value="1">primary</option>
+                                                            <option value="2">secondary</option>
+                                                        </select>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td style="border:none;">
+                                                        <input type="checkbox" class="nobord" name="CustomData" value="0" />Galileo Galilei
                                                     </td>
                                                     <td style="border:none; width:20px; vertical-align:bottom;">
                                                         <select name="CustomDatat">
@@ -367,10 +439,10 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                         </td>
                                         <td style="border:none; vertical-align:top;">
                             	
-                                            <table style="border:none; width:210px;" cellpadding="0" cellspacing="0">
+                                            <table style="border:none; width:285px;" cellpadding="0" cellspacing="0">
                                                 <tr>
-                                                    <td style="border:none; width:100px;">
-                                                        <input type="checkbox" class="nobord" name="CustomData" value="0" />Lone Ranger
+                                                    <td style="border:none; width:285px;">
+                                                        <input type="checkbox" class="nobord" name="CustomData" value="0" />Antoine Laurent Lavoisier
                                                     </td>
                                                     <td style="border:none; width:20px; vertical-align:bottom;">
                                                         <select name="CustomDatbaw">
@@ -382,7 +454,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                                 </tr>
                                                 <tr>
                                                     <td style="border:none;">
-                                                        <input type="checkbox" class="nobord" name="CustomData" value="0" />Fred Flinstone
+                                                        <input type="checkbox" class="nobord" name="CustomData" value="0" />Johannes Kepler
                                                     </td>
                                                     <td style="border:none; width:20px; vertical-align:bottom;">
                                                         <select name="CustomDatane">
@@ -394,10 +466,82 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                                 </tr>
                                                 <tr>
                                                     <td style="border:none;">
-                                                        <input type="checkbox" class="nobord" name="CustomData" value="0" />Road Runner
+                                                        <input type="checkbox" class="nobord" name="CustomData" value="0" />Nicolaus Copernicus
                                                     </td>
                                                     <td style="border:none; width:20px; vertical-align:bottom;">
                                                         <select name="CustomDatarm">
+                                                            <option value="0" selected="selected">select</option>
+                                                            <option value="1">primary</option>
+                                                            <option value="2">secondary</option>
+                                                        </select>
+                                                    </td>
+                                                </tr>
+                                                 <tr>
+                                                    <td style="border:none; width:100px;">
+                                                        <input type="checkbox" class="nobord" name="CustomData" value="0" />Michael Faraday
+                                                    </td>
+                                                    <td style="border:none; width:20px; vertical-align:bottom;">
+                                                        <select name="CustomDataw">
+                                                            <option value="0" selected="selected">select</option>
+                                                            <option value="1">primary</option>
+                                                            <option value="2">secondary</option>
+                                                        </select>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td style="border:none;">
+                                                        <input type="checkbox" class="nobord" name="CustomData" value="0" />James Clerk Maxwell
+                                                    </td>
+                                                    <td style="border:none; width:20px; vertical-align:bottom;">
+                                                        <select name="CustomDatae">
+                                                            <option value="0" selected="selected">select</option>
+                                                            <option value="1">primary</option>
+                                                            <option value="2">secondary</option>
+                                                        </select>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td style="border:none;">
+                                                        <input type="checkbox" class="nobord" name="CustomData" value="0" />Claude Bernard
+                                                    </td>
+                                                    <td style="border:none; width:20px; vertical-align:bottom;">
+                                                        <select name="CustomDatar">
+                                                            <option value="0" selected="selected">select</option>
+                                                            <option value="1">primary</option>
+                                                            <option value="2">secondary</option>
+                                                        </select>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td style="border:none;">
+                                                        <input type="checkbox" class="nobord" name="CustomData" value="0" />Franz Boas
+                                                    </td>
+                                                    <td style="border:none; width:20px; vertical-align:bottom;">
+                                                        <select name="CustomDatat">
+                                                            <option value="0" selected="selected">select</option>
+                                                            <option value="1">primary</option>
+                                                            <option value="2">secondary</option>
+                                                        </select>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td style="border:none; width:100px;">
+                                                        <input type="checkbox" class="nobord" name="CustomData" value="0" />Werner Heisenberg
+                                                    </td>
+                                                    <td style="border:none; width:20px; vertical-align:bottom;">
+                                                        <select name="CustomDataw">
+                                                            <option value="0" selected="selected">select</option>
+                                                            <option value="1">primary</option>
+                                                            <option value="2">secondary</option>
+                                                        </select>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td style="border:none;">
+                                                        <input type="checkbox" class="nobord" name="CustomData" value="0" />Neils Bohr
+                                                    </td>
+                                                    <td style="border:none; width:20px; vertical-align:bottom;">
+                                                        <select name="CustomDatae">
                                                             <option value="0" selected="selected">select</option>
                                                             <option value="1">primary</option>
                                                             <option value="2">secondary</option>
