[BFN] KRAFUNC-23 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6408 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-time-money.html
+++ b/kra-awa-dev/aw-time-money.html
@@ -1677,8 +1677,7 @@
                         </td>
                     </tr>
                     <tr>
-                    	<th scope="row">Total</th>
-                    	<td colspan="8" class="infoline">&nbsp;</td>
+                    	<td colspan="9" class="infoline" style="text-align:right;"><strong>Total:</strong></td>
                     	<td class="infoline"><div align="right"><strong>$4,000.00</strong></div></td>
                         <td class="infoline" style="text-align:center;"><a href="#"><img src="../images/tinybutton-recalculate.gif" alt="delete" width=72 height=15 hspace=3 vspace=3 border=0></a></td>
                     </tr>
