[BFN] Questionnaire outline controls.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6410 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/questionnaire-editor.html
+++ b/BFN/questionnaire-editor.html
@@ -533,7 +533,28 @@
                         <table width="100%" cellpadding="0" cellspacing="0" class="subelement">
                             <tr>
                                 <td class="subelementcontent">
-                                    <p>[Controls for the Questionnare Here: new, add template, edit label, versioning]</p>
+                                    At first entry:
+                                    <ul>
+                                    	<li>Create New Blank Questionnaire (requires at least one section)</li>
+                                        <li>Load Existing Questionnaire (search function)</li>
+                                        <li>Load Questionnaire Template (search function)</li>
+                                    </ul>
+                                    After something is loaded:
+                                    <ul>
+                                    	<li>Insert Questionnaire Template (search function)</li>
+                                        <li>Insert Workspace/Non-template</li>
+                                        <li>Insert Section</li>
+                                        <li>Edit Questionnaire Name</li>
+                                        <li>Status</li>
+                                        <li>Edit Description</li>
+                                        <li>Module (dropdown)</li>
+                                        <li>Submodule (dependent dropdown)</li>
+                                        <li>Preview</li>
+                                        <li>Approve</li>
+                                        <li>Route for Approval</li>
+                                        <li>Save as Template</li>
+                                        <li>Save (will increment version for changes other than status)</li>
+                                    </ul>
                                 </td>
                             </tr>
                         </table>
@@ -560,7 +581,12 @@
 										<table width="100%" cellpadding="0" cellspacing="0" class="subelement">
                                             <tr>
                                                 <td class="subelementcontent">
-                                                    <p>[Controls for the Template Here: move, remove/cut/copy/paste, add section, edit label, versioning]</p>
+                                                    Controls for the Template:
+                                                    <ul>
+                                                        <li>Insert Section</li>
+                                                        <li>Remove Template/Workspace from this Questionnaire</li>
+                                                        <li>Move Template/Workspace</li>
+                                                    </ul>
                                                 </td>
                                             </tr>
                                         </table>
@@ -1021,7 +1047,8 @@
                         <thead>
                             <tr>
                                 <th class="elementheader" align="left">
-                                    Template 2: Pharmaceutical Controls (v.2.00000)
+                                    Workspace (Non-template)
+                                    <!--Template 2: Pharmaceutical Controls (v.2.00000)-->
                                 </th>
                                 <th class="elementheader" style="text-align:right; padding:2px;">
                                     <a href="#"><img src="../images/my_cp_inf.gif" width="15" height="14" border="0" title="Help" /></a>
@@ -1036,7 +1063,12 @@
 										<table width="100%" cellpadding="0" cellspacing="0" class="subelement">
                                             <tr>
                                                 <td class="subelementcontent">
-                                                    <p>[Controls for the Template Here: move, remove/cut/copy/paste, add section, edit label, versioning]</p>
+                                                    Controls for the Template / Workspace:
+                                                    <ul>
+                                                        <li>Insert Section</li>
+                                                        <li>Remove Template/Workspace from this Questionnaire</li>
+                                                        <li>Move Template/Workspace</li>
+                                                    </ul>
                                                 </td>
                                             </tr>
                                         </table>
