[BFN] KRAFUNC-99 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6411 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/questionnaire-presentation.html
+++ b/BFN/questionnaire-presentation.html
@@ -304,7 +304,21 @@
             <td class="panelcontent1">&nbsp;</td>
             <td class="panelcontent2" colspan="3">
                
-               	<!-- ELEMENT HEAD: Label Here -->
+               	<div style="padding-bottom:5px;">
+                    <table width="100%" cellpadding="0" cellspacing="0" class="subelement">
+                        <tr>
+                            <td class="subelementcontent">
+                                Controls for the Questionnaire:
+                                <ul>
+                                    <li>Print</li>
+                                    <li>Export</li>
+                                </ul>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <!-- ELEMENT HEAD: Label Here -->
                 <table class="elementhead_table">
                     <tr>
                         <th class="elementhead_left">
