[BFN] KRAFUNC-103 updates.  Includes NavTab update on all Awards pages.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6416 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-questions.html
+++ b/kra-awa-dev/aw-questions.html
@@ -75,7 +75,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-permissions.html');return document.MM_returnValue" value="Permissions">
         </span></dt> 
 <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-notes.html');return document.MM_returnValue" value="Comments &amp; Attachments">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-notes.html');return document.MM_returnValue" value="Notes &amp; Attachments">
         </span></dt> <dt><span class="tabright">
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-actions.html');return document.MM_returnValue" value="Award Actions">
         </span></dt>
