--- a/kra-awa-dev/aw-actions.html
+++ b/kra-awa-dev/aw-actions.html
@@ -73,7 +73,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-permissions.html');return document.MM_returnValue" value="Permissions">
         </span></dt> 
 <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-notes.html');return document.MM_returnValue" value="Comments &amp; Attachments">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-notes.html');return document.MM_returnValue" value="Notes &amp; Attachments">
         </span></dt> <dt class="licurrent" ><span class="tabright tabcurrent">
         <input name="Submit2" type="submit" onClick="MM_goToURL('parent','aw-actions.html');return document.MM_returnValue" value="Award Actions">
         </span></dt>  
