--- a/kra-awa-dev/aw-payments-reports-terms.html
+++ b/kra-awa-dev/aw-payments-reports-terms.html
@@ -80,7 +80,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         <input name="Submit" type="submit" onclick="MM_goToURL('parent','aw-permissions.html');return document.MM_returnValue" value="Permissions" />
         </span></dt>
       <dt><span class="tabright">
-        <input name="Submit" type="submit" onclick="MM_goToURL('parent','aw-notes.html');return document.MM_returnValue" value="Comments &amp; Attachments" />
+        <input name="Submit" type="submit" onclick="MM_goToURL('parent','aw-notes.html');return document.MM_returnValue" value="Notes &amp; Attachments" />
         </span></dt>
       <dt><span class="tabright">
         <input name="Submit" type="submit" onclick="MM_goToURL('parent','aw-actions.html');return document.MM_returnValue" value="Award Actions" />
