--- a/kra-awa-dev/aw-time-money.html
+++ b/kra-awa-dev/aw-time-money.html
@@ -91,7 +91,7 @@
                 <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-permissions.html');return document.MM_returnValue" value="Permissions">
             </span></dt>
             <dt><span class="tabright">
-                <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-notes.html');return document.MM_returnValue" value="Comments &amp; Attachments">
+                <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-notes.html');return document.MM_returnValue" value="Notes &amp; Attachments">
             </span></dt>
             <dt><span class="tabright">
                 <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-actions.html');return document.MM_returnValue" value="Award Actions">
