[BFN] KRAFUNC-150 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6426 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-pdb-dev/prop-proposal.html
+++ b/kra-pdb-dev/prop-proposal.html
@@ -731,7 +731,7 @@ function addLoadEvent(func) {
                 </tr>
                   
                 <tr>
-                    <th rowspan="2">1</th>
+                    <th rowspan="2" style="width:65px;">1</th>
                     <td>
                         <input name="textfield223242" type="text" value="Home Office" size="20" />
                     </td>
@@ -987,7 +987,7 @@ function addLoadEvent(func) {
                 </tr>
                   
                 <tr>
-                    <th rowspan="2">1</th>
+                    <th rowspan="2" style="width:65px;">1</th>
                     <td>
                         <input name="textfield223242" type="text" value="Home Office" size="20" />
                     </td>
