[BFN] Questionnaire mocks.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6447 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/questionnaire-presentation.html
+++ b/BFN/questionnaire-presentation.html
@@ -211,7 +211,7 @@
         	<td align="left" valign="middle">
             	<span class="pagetitle">
                 	Questionnaire 
-                	<a href="#"><img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="bottom" /></a>
+                	<input src="../images/my_cp_inf.gif" onclick="javascript: alert('This would open the help dialog for this page.'); return false;" style="border:none;" alt="help" title="Help" type="image" />
                 </span>
             </td>
             <td align="right">
@@ -312,7 +312,7 @@
                             Questionnaire Controls
                         </th>
                         <th class="elementhead_right">
-                            <a href="#"><img src="../images/my_cp_inf.gif" width="15" height="14" border="0" alt="help" /></a>
+                            <input src="../images/my_cp_inf.gif" onclick="javascript: alert('This would open the help dialog for this section.'); return false;" style="border:none;" alt="help" title="Help" type="image" />
                         </th>
                     </tr>
                 </table>
@@ -348,7 +348,7 @@
                             Section 1: Research Details (page 1)
                         </th>
                         <th class="elementhead_right">
-                            <a href="#"><img src="../images/my_cp_inf.gif" width="15" height="14" border="0" alt="help" /></a>
+                            <input src="../images/my_cp_inf.gif" onclick="javascript: alert('This would open the help dialog for this section.'); return false;" style="border:none;" alt="help" title="Help" type="image" />
                         </th>
                     </tr>
                 </table>
@@ -586,7 +586,7 @@
                             Section 2: Animal Procurement (page 1)
                         </th>
                         <th class="elementhead_right">
-                            <a href="#"><img src="../images/my_cp_inf.gif" width="15" height="14" border="0" alt="help" /></a>
+                            <input src="../images/my_cp_inf.gif" onclick="javascript: alert('This would open the help dialog for this section.'); return false;" style="border:none;" alt="help" title="Help" type="image" />
                         </th>
                     </tr>
                 </table>
@@ -680,7 +680,7 @@
                             [section label here]
                         </th>
                         <th class="elementhead_right">
-                            <a href="#"><img src="../images/my_cp_inf.gif" width="15" height="14" border="0" alt="help" /></a>
+                            <input src="../images/my_cp_inf.gif" onclick="javascript: alert('This would open the help dialog for this section.'); return false;" style="border:none;" alt="help" title="Help" type="image" />
                         </th>
                     </tr>
                 </table>
@@ -735,7 +735,7 @@
                             [section label here]
                         </th>
                         <th class="elementhead_right">
-                            <a href="#"><img src="../images/my_cp_inf.gif" width="15" height="14" border="0" alt="help" /></a>
+                            <input src="../images/my_cp_inf.gif" onclick="javascript: alert('This would open the help dialog for this section.'); return false;" style="border:none;" alt="help" title="Help" type="image" />
                         </th>
                     </tr>
                 </table>
