--- a/BFN/unithierarchy.html
+++ b/BFN/unithierarchy.html
@@ -587,9 +587,9 @@
                                                                                 <th>
                                                                                 	<!--<a href="#"><img src="../images/arrow-up.gif" width="17" height="14" border="0" alt="Move Up" title="Move this node up within its group"></a>&nbsp;
                                                                                     <a href="#"><img src="../images/arrow-down.gif" width="17" height="14" border="0" alt="Move Down" title="Move this node down within its group"></a>&nbsp;-->
-                                                                                    <a href="#"><img src="./images/tinybutton-removenode.gif" width="79" height="15" border="0" alt="Remove Node" title="Remove this node and its child groups/sponsors"></a>&nbsp;
-                                                                                    <a href="#"><img src="./images/tinybutton-cutnode.gif" width="79" height="15" border="0" alt="Cut Node" title="Cut this node and its child roups/sponsors.  (Node will not be removed until you paste it.)"></a>&nbsp;
-                                                                                	<a href="#"><img src="./images/tinybutton-pastenode.gif" width="79" height="15" border="0" alt="Paste Node" title="Paste your previously cut node structure under this node"></a>
+                                                                                    <a href="#"><img src="../images/tinybutton-removenode.gif" width="79" height="15" border="0" alt="Remove Node" title="Remove this node and its child groups/sponsors"></a>&nbsp;
+                                                                                    <a href="#"><img src="../images/tinybutton-cutnode.gif" width="79" height="15" border="0" alt="Cut Node" title="Cut this node and its child roups/sponsors.  (Node will not be removed until you paste it.)"></a>&nbsp;
+                                                                                	<a href="#"><img src="../images/tinybutton-pastenode.gif" width="79" height="15" border="0" alt="Paste Node" title="Paste your previously cut node structure under this node"></a>
                                                                                 </th>
                                                                             </tr>
                                                                             <!-- Edit Unit -->
