--- a/kra-awa-dev/pop-validrates.html
+++ b/kra-awa-dev/pop-validrates.html
@@ -1,1 +1,171 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>  <title>Kuali</title><LINK REL="SHORTCUT ICON" HREF="../images/icon.ico"><meta http-equiv=Content-Type content="text/html; charset=ISO-8859-1"><link href="../css/kuali_application.css" rel=stylesheet type="text/css"><link href="../css/kuali.css" rel=stylesheet type="text/css"><script language=javascript src="../scripts/my_bm_inc.js"></script><script language=javascript1.2 src="../scripts/my_explorer.js"></script><script language=JavaScript1.2 src="../scripts/my_wap_bkmrk_fix.js"></script><script language=JavaScript src="../scripts/CalendarPopup.js"></script><script language=JavaScript type="text/JavaScript"><!--function MM_goToURL() { //v3.0  var i, args=MM_goToURL.arguments; document.MM_returnValue = false;  for (i=0; i<(args.length-1); i+=2) eval(args[i]+".location='"+args[i+1]+"'");}//--></script><style type="text/css"><!--#workarea .neutral {	background-color: #FFFFFF;	border: 1px none #FFFFFF;	width: 50%;}--></style></head><body onLoad="placeFocus();"><form name="example" id="kualiForm" method="post" action="/kuali-reg/kr/inquiry.do" enctype="" onSubmit="return hasFormAlreadyBeenSubmitted();">  <div class="headerarea-small" id="headerarea-small">          <h1>Valid F&amp;A Rates <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></h1></div><table width="100%" cellpadding="0" cellspacing="0">    <tr>      <td class="column-left"><img src="../images/pixel_clear.gif" alt="" width="20" height="20"></td>      <td><div id="workarea">              <p>          <!-- if the section has errors, override and set isOpen to true -->          <!-- TAB -->        </p>        <table class="tab" summary="" border="1" cellpadding="0" cellspacing="0" width="100%">          <tbody>            <tr>              <td class="tabtable1-left"><img src="../images/tab-topleft.gif" alt="asd" align="absmiddle" height="29" width="12"> <a name="0"></a>Rights</td>              <td class="tabtable1-mid">&nbsp;</td>              <td class="tabtable1-right"><img src="../images/tab-topright.gif" alt="ASD" align="middle" height="29" width="12"></td>            </tr>          </tbody>        </table>        <div style="display: block;" id="tab-0-div">          <!-- display errors for this tab -->          <!-- Before the jsp:doBody of the kul:tab tag -->          <div class="tab-container" align="center"><div class="h2-container"> <span class="subhead-left">              <h2>User Rights</h2>              </span></div>            <table cellpadding=0 cellspacing="0"  summary="">              <tr>                <th align=left valign=middle >On Campus Rate</th>                <th align=left valign=middle > Off Campus Rate</th>                <th align=left valign=middle >Adjustment Key </th>              </tr>              <tr>                <td align=left valign=middle >0.0   </td>                <td align=left valign=middle >0.0</td>                <td align=left valign=middle >029999</td>              </tr>              <tr>                <td align=left valign=middle >0.0   </td>                <td align=left valign=middle >999.99</td>                <td align=left valign=middle >029990</td>              </tr>              <tr>                <td align=left valign=middle >10.0 </td>                <td align=left valign=middle >10.0</td>                <td align=left valign=middle >020015</td>              </tr>              <tr>                <td align=left valign=middle >15.0   </td>                <td align=left valign=middle >0.0</td>                <td align=left valign=middle >020001</td>              </tr>              <tr>                <td align=left valign=middle >20.0 </td>                <td align=left valign=middle >20.0 </td>                <td align=left valign=middle >020018</td>              </tr>              <tr>                <td align=left valign=middle >24.2 </td>                <td align=left valign=middle >24.2 </td>                <td align=left valign=middle >020025</td>              </tr>              <tr>                <td align=left valign=middle >33.9 </td>                <td align=left valign=middle > 0.0</td>                <td align=left valign=middle >020014</td>              </tr>              <tr>                <td align=left valign=middle >37.7 </td>                <td align=left valign=middle > 37.7</td>                <td align=left valign=middle >020003</td>              </tr>              <tr>                <td align=left valign=middle >40.7   </td>                <td align=left valign=middle >40.7</td>                <td align=left valign=middle >020019</td>              </tr>              <tr>                <td align=left valign=middle >43.1   </td>                <td align=left valign=middle >46.3</td>                <td align=left valign=middle >020006</td>              </tr>              <tr>                <td align=left valign=middle >43.5   </td>                <td align=left valign=middle >47.0</td>                <td align=left valign=middle >020011</td>              </tr>              <tr>                <td align=left valign=middle >46.2</td>                <td align=left valign=middle > 49.9</td>                <td align=left valign=middle >020024</td>              </tr>              <tr>                <td align=left valign=middle >46.2   </td>                <td align=left valign=middle >0.0</td>                <td align=left valign=middle >020023</td>              </tr>              <tr>                <td align=left valign=middle >59.0   </td>                <td align=left valign=middle >9.9</td>                <td align=left valign=middle >020022</td>              </tr>              <tr>                <td align=left valign=middle >999.99   </td>                <td align=left valign=middle >0.0</td>                <td align=left valign=middle >029991</td>              </tr>            </table>          </div>          <!-- After the jsp:doBody of the kul:tab tag -->        </div>        <!-- if the section has errors, override and set isOpen to true -->        <!-- TAB -->        <table class="b3" summary="" border="0" cellpadding="0" cellspacing="0" width="100%">          <tbody>            <tr>              <td class="footer" align="left"><img src="../images/pixel_clear.gif" alt="" class="bl3" height="14" width="12"></td>              <td class="footer-right" align="right"><img src="../images/pixel_clear.gif" alt="" class="br3" height="14" width="12"></td>            </tr>          </tbody>        </table>        </div></td>      <td class="column-right"><img src="../images/pixel_clear.gif" alt="" width="20" height="20"></td>    </tr>  </table>  <table class="bord-r-t" border="0" cellpadding="0" cellspacing="0" width="100%">    <tbody>      <tr>        <th align="center">           <br><br><a href="javascript:window.close();">          <img src="../images/buttonsmall_close.gif" alt="close this window" align="absmiddle"></a>        </th>      </tr>    </tbody>  </table>  <!-- lookup/inquiry footer --></form></body></html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>  
+<title>Kuali</title>
+<LINK REL="SHORTCUT ICON" HREF="../images/icon.ico">
+<meta http-equiv=Content-Type content="text/html; charset=ISO-8859-1">
+<link href="../css/kuali_application.css" rel=stylesheet type="text/css">
+<link href="../css/kuali.css" rel=stylesheet type="text/css">
+<script language=javascript src="../scripts/my_bm_inc.js"></script>
+<script language=javascript1.2 src="../scripts/my_explorer.js"></script>
+<script language=JavaScript1.2 src="../scripts/my_wap_bkmrk_fix.js"></script>
+<script language=JavaScript src="../scripts/CalendarPopup.js"></script>
+<script language=JavaScript type="text/JavaScript">
+<!--
+
+function MM_goToURL() { //v3.0
+  var i, args=MM_goToURL.arguments; document.MM_returnValue = false;
+  for (i=0; i<(args.length-1); i+=2) eval(args[i]+".location='"+args[i+1]+"'");
+}
+//-->
+</script>
+<style type="text/css">
+<!--
+#workarea .neutral {
+	background-color: #FFFFFF;
+	border: 1px none #FFFFFF;
+	width: 50%;
+}
+-->
+</style>
+</head>
+<body onLoad="placeFocus();">
+<form name="example" id="kualiForm" method="post" action="/kuali-reg/kr/inquiry.do" enctype="" onSubmit="return hasFormAlreadyBeenSubmitted();">
+  <div class="headerarea-small" id="headerarea-small">
+          <h1>Valid Rates <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></h1></div><table width="100%" cellpadding="0" cellspacing="0">
+    <tr>
+      <td class="column-left"><img src="../images/pixel_clear.gif" alt="" width="20" height="20"></td>
+      <td><div id="workarea">
+      
+        <p>
+          <!-- if the section has errors, override and set isOpen to true -->
+          <!-- TAB -->
+        </p>
+        <table class="tab" summary="" border="1" cellpadding="0" cellspacing="0" width="100%">
+          <tbody>
+            <tr>
+              <td class="tabtable1-left"><img src="../images/tab-topleft.gif" alt="asd" align="absmiddle" height="29" width="12"> <a name="0"></a>Valid Rates</td>
+              <td class="tabtable1-mid">&nbsp;</td>
+              <td class="tabtable1-right"><img src="../images/tab-topright.gif" alt="ASD" align="middle" height="29" width="12"></td>
+            </tr>
+          </tbody>
+        </table>
+        <div style="display: block;" id="tab-0-div">
+          <!-- display errors for this tab -->
+          <!-- Before the jsp:doBody of the kul:tab tag -->
+          <div class="tab-container" align="center"><div class="h2-container"> <span class="subhead-left">
+              <h2>Valid Rates</h2>
+              </span></div>
+            <table cellpadding=0 cellspacing="0"  summary="">
+              <tr>
+                <th align=left valign=middle >On Campus Rate</th>
+                <th align=left valign=middle > Off Campus Rate</th>
+                <th align=left valign=middle >Adjustment Key </th>
+              </tr>
+              <tr>
+                <td align=left valign=middle >0.0   </td>
+                <td align=left valign=middle >0.0</td>
+                <td align=left valign=middle >029999</td>
+              </tr>
+              <tr>
+                <td align=left valign=middle >0.0   </td>
+                <td align=left valign=middle >999.99</td>
+                <td align=left valign=middle >029990</td>
+              </tr>
+              <tr>
+                <td align=left valign=middle >10.0 </td>
+                <td align=left valign=middle >10.0</td>
+                <td align=left valign=middle >020015</td>
+              </tr>
+              <tr>
+                <td align=left valign=middle >15.0   </td>
+                <td align=left valign=middle >0.0</td>
+                <td align=left valign=middle >020001</td>
+              </tr>
+              <tr>
+                <td align=left valign=middle >20.0 </td>
+                <td align=left valign=middle >20.0 </td>
+                <td align=left valign=middle >020018</td>
+              </tr>
+              <tr>
+                <td align=left valign=middle >24.2 </td>
+                <td align=left valign=middle >24.2 </td>
+                <td align=left valign=middle >020025</td>
+              </tr>
+              <tr>
+                <td align=left valign=middle >33.9 </td>
+                <td align=left valign=middle > 0.0</td>
+                <td align=left valign=middle >020014</td>
+              </tr>
+              <tr>
+                <td align=left valign=middle >37.7 </td>
+                <td align=left valign=middle > 37.7</td>
+                <td align=left valign=middle >020003</td>
+              </tr>
+              <tr>
+                <td align=left valign=middle >40.7   </td>
+                <td align=left valign=middle >40.7</td>
+                <td align=left valign=middle >020019</td>
+              </tr>
+              <tr>
+                <td align=left valign=middle >43.1   </td>
+                <td align=left valign=middle >46.3</td>
+                <td align=left valign=middle >020006</td>
+              </tr>
+              <tr>
+                <td align=left valign=middle >43.5   </td>
+                <td align=left valign=middle >47.0</td>
+                <td align=left valign=middle >020011</td>
+              </tr>
+              <tr>
+                <td align=left valign=middle >46.2</td>
+                <td align=left valign=middle > 49.9</td>
+                <td align=left valign=middle >020024</td>
+              </tr>
+              <tr>
+                <td align=left valign=middle >46.2   </td>
+                <td align=left valign=middle >0.0</td>
+                <td align=left valign=middle >020023</td>
+              </tr>
+              <tr>
+                <td align=left valign=middle >59.0   </td>
+                <td align=left valign=middle >9.9</td>
+                <td align=left valign=middle >020022</td>
+              </tr>
+              <tr>
+                <td align=left valign=middle >999.99   </td>
+                <td align=left valign=middle >0.0</td>
+                <td align=left valign=middle >029991</td>
+              </tr>
+            </table>
+          </div>
+          <!-- After the jsp:doBody of the kul:tab tag -->
+        </div>
+        <!-- if the section has errors, override and set isOpen to true -->
+        <!-- TAB -->
+        <table class="b3" summary="" border="0" cellpadding="0" cellspacing="0" width="100%">
+          <tbody>
+            <tr>
+              <td class="footer" align="left"><img src="../images/pixel_clear.gif" alt="" class="bl3" height="14" width="12"></td>
+              <td class="footer-right" align="right"><img src="../images/pixel_clear.gif" alt="" class="br3" height="14" width="12"></td>
+            </tr>
+          </tbody>
+        </table>
+        </div></td>
+      <td class="column-right"><img src="../images/pixel_clear.gif" alt="" width="20" height="20"></td>
+    </tr>
+  </table>
+  <table class="bord-r-t" border="0" cellpadding="0" cellspacing="0" width="100%">
+    <tbody>
+      <tr>
+        <th align="center"> 
+          <br><br>
+<a href="javascript:window.close();">
+          <img src="../images/buttonsmall_close.gif" alt="close this window" align="absmiddle"></a>        </th>
+      </tr>
+    </tbody>
+  </table>
+  <!-- lookup/inquiry footer -->
+</form>
+</body>
+</html>
