[BFN] KRAFUNC-183 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6469 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/questionnaire-editor.html
+++ b/BFN/questionnaire-editor.html
@@ -1297,7 +1297,7 @@
                                                                                             </select>
                                                                                         </td>
                                                                                         <td class="content_info" style="text-align:center;">
-                                                                                            Previous Response:
+                                                                                            Parent Response:
                                                                                             <select name="CustomData">
                                                                                                 <option value="0" selected="selected">select</option>
                                                                                                 <option value="1">Contains text value</option>
