[BFN] Question Manager updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6477 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/questionnaire-preview.html
+++ b/BFN/questionnaire-preview.html
@@ -536,7 +536,7 @@
             <td class="panelcontent1">&nbsp;</td>
             <td class="panelcontent2" colspan="3">
             
-            	[Preview: This would be a similar view as one of the tabs on the <a href="questionnaire-presentation.html" target="_blank" style="color:#ff0000;"><u>presentation view</u></a>.  The only noted divergence might be making the Unique Question Number more prominent on this Preview to help with questionnaire editing.  When we have a stable enough concept for those tabs, I can copy it here.]
+            	[Preview: This would be a view like one of the tabs on the <a href="questionnaire-presentation.html" target="_blank" style="color:#ff0000;"><u>presentation view</u></a>.  When we have a stable enough concept for those tabs, I can copy it here.]
             
             </td>
             <td class="panelcontent3">&nbsp;</td>
